--- a/services/auth-service/package.json
+++ b/services/auth-service/package.json
@@ -22,6 +22,7 @@
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "mongoose": "^8.16.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.0",
@@ -39,6 +40,7 @@
     "@types/helmet": "^4.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/knex": "^0.16.1",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^20.5.1",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
@@ -46,6 +48,7 @@
     "@types/uuid": "^9.0.8",
     "@types/winston": "^2.4.4",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   }
 }
