--- a/services/notification-service/package.json
+++ b/services/notification-service/package.json
@@ -2,11 +2,14 @@
   "name": "notification-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/main.js",
+  "private": true,
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/index.ts",
     "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only --require tsconfig-paths/register src/index.ts",
     "build": "tsc",
+    "lint": "eslint src --ext .ts",
+    "test": "jest",
     "migrate": "knex migrate:latest --knexfile knexfile.ts",
     "migrate:rollback": "knex migrate:rollback --knexfile knexfile.ts",
     "migrate:make": "knex migrate:make --knexfile knexfile.ts"
@@ -16,16 +19,32 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.1",
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/instrumentation": "^0.203.0",
+    "@opentelemetry/instrumentation-express": "^0.32.4",
+    "@opentelemetry/instrumentation-http": "^0.32.0",
+    "@opentelemetry/sdk-trace-base": "^2.0.1",
+    "@opentelemetry/sdk-trace-node": "^1.30.1",
+    "africastalking": "^0.5.4",
     "axios": "^1.9.0",
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^6.7.0",
+    "firebase": "^11.10.0",
+    "firebase-admin": "^11.10.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "kafkajs": "^2.2.4",
     "morgan": "^1.10.0",
     "nodemailer": "^7.0.3",
     "pg": "^8.16.0",
-    "twilio": "^5.7.1"
+    "prom-client": "^14.2.0",
+    "redis": "^4.6.7",
+    "twilio": "^5.7.1",
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2"
   },
   "devDependencies": {
     "@types/africastalking": "^0.6.2",
@@ -34,13 +53,19 @@
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.3",
+    "@types/express-rate-limit": "^6.0.2",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^29.5.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.0.1",
     "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.4",
     "@types/twilio": "^3.19.3",
+    "eslint": "^8.38.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3"
   }
 }
