--- a/apps/customer-web/package.json
+++ b/apps/customer-web/package.json
@@ -15,13 +15,16 @@
   "license": "ISC",
   "packageManager": "pnpm@10.12.4",
   "dependencies": {
-    "next": "^13.4.19",
+    "framer-motion": "^12.23.6",
+    "lucide-react": "^0.525.0",
+    "next": "^15.4.3",
     "next-intl": "^4.3.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^10.0.0",
@@ -29,6 +32,6 @@
     "eslint-plugin-formatjs": "^5.4.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.4.0",
-    "typescript": "^5.2.0"
+    "typescript": "^5.8.3"
   }
 }
