--- a/services/api-gateway/package.json
+++ b/services/api-gateway/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "dev": "ts-node-dev --respawn src/main.ts"
-},
+    "dev": "ts-node-dev --respawn src/main.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/http-proxy": "^1.17.16",
+    "@types/http-proxy-middleware": "^1.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "ts-node-dev": "^2.0.0",
